<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_tricount"
        android:textSize="25sp"
        android:background="#2276C3"
        android:textColor="@color/white"
        android:gravity="left"
        android:padding="15sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/textNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nom"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/editNom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/text_edit_nom"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:background="@drawable/rounded_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description"
            android:textSize="25sp"
            android:layout_marginEnd="40dp"
            />

        <EditText
            android:id="@+id/editDesc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/text_edit_description"
            android:textSize="20sp"
            android:background="@drawable/rounded_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            android:textSize="25sp"
            android:layout_marginEnd="30dp"
            />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/text_edit_date"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:inputType="date"
            android:background="@drawable/rounded_input"
            />
    </LinearLayout>

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_tricount"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2276C3"
        />

</LinearLayout>