<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/text_Membre"
        android:background="#2276C3"
        android:textColor="@color/white"
        android:gravity="left"
        android:padding="15sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMembre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/buttonAddMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_Membre"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2276C3"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_retour"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#2276C3"
        android:layout_marginBottom="30dp"
        />
</LinearLayout>